Добавил страницу с выбором вариантов по номерам и сверстал вариант по номеру

--- a/profile.html
+++ b/profile.html
@@ -89,9 +89,9 @@
 </section>
 <section class="variants_types cat-types">
   <ul class="variants_types_list cat-list">
-    <li class="variants_types_list-item active numbers cat-list-item">Задания по вариантам</li>
-    <li class="variants_types_list-item themes cat-list-item">Задания по темам</li>
-    <li class="variants_types_list-item prepared cat-list-item">Варианты</li>
+    <li class="variants_types_list-item  numbers cat-list-item"><a href="numbers.html">Задания по номерам</a></li>
+    <li class="variants_types_list-item themes cat-list-item"><a href="themes.html">Задания по темам</a></li>
+    <li class="variants_types_list-item prepared cat-list-item"><a href="variants.html">Варианты</a></li>
   </ul>
 </section>
 <script src="js/users-info.js" type="module"></script>
