--- a/variant_3.html
+++ b/variant_3.html
@@ -26,9 +26,9 @@
 <main>
   <section class="variants_types">
     <ul class="variants_types_list">
-      <li class="variants_types_list-item numbers">Задания по номерам</li>
-      <li class="variants_types_list-item themes">Задания по темам</li>
-      <li class="variants_types_list-item active prepared">Варианты</li>
+      <li class="variants_types_list-item numbers"><a href="numbers.html">Задания по номерам</a></li>
+      <li class="variants_types_list-item themes"><a href="themes.html">Задания по темам</a></li>
+      <li class="variants_types_list-item active prepared"><a href="variants.html">Варианты</a></li>
     </ul>
   </section>
   <article class="variant">
