--- a/variant_1.html
+++ b/variant_1.html
@@ -31,7 +31,7 @@
             <li class="variants_types_list-item active prepared"><a href="variants.html">Варианты</a></li>
         </ul>
     </section>
-    <article class="variant">
+    <article class="variant" id="1">
         <h1>Вариант 1</h1>
         <form action="#" method="get" name="v1" id="v1">
             <ul class="variant-tasks">
