--- a/variant_3.html
+++ b/variant_3.html
@@ -31,7 +31,7 @@
       <li class="variants_types_list-item active prepared"><a href="variants.html">Варианты</a></li>
     </ul>
   </section>
-  <article class="variant">
+  <article class="variant" id="3">
     <h1>Вариант 3</h1>
     <form action="#" method="get" name="v3" id="v3">
       <ul class="variant-tasks">
