--- a/variant_2.html
+++ b/variant_2.html
@@ -31,7 +31,7 @@
             <li class="variants_types_list-item active prepared"><a href="variants.html">Варианты</a></li>
         </ul>
     </section>
-    <article class="variant">
+    <article class="variant" id="2">
         <h1>Вариант 2</h1>
         <form action="#" method="get" name="v2" id="v2">
             <ul class="variant-tasks">
