--- a/variant_4.html
+++ b/variant_4.html
@@ -15,7 +15,9 @@
       <h2 class="logo-name">Кот да Винчи</h2>
     </a>
     <div class="user-info">
-      <img src="img/avatar.jpg" alt="Ваш аватар" width="75">
+      <a href="profile.html">
+        <img src="img/pudge.jpg" alt="Ваш аватар" width="75" height="75">
+    </a>
       <div class="pages-header-stats">
         <p class="user-info-happiness">Настроение: <span class="user-info-happiness__amount">123 XP</span></p>
         <div class="user-info-happiness__level"></div>
@@ -580,6 +582,6 @@
     </ul>
   </footer>
 </main>
-<script src="js/compare-answer.js" type="module"></script>
+<script src="js/add-answer.js" type="module"></script>
 </body>
 </html>
