--- a/numbers/numbers_1.html
+++ b/numbers/numbers_1.html
@@ -31,9 +31,9 @@
             <li class="variants_types_list-item prepared">Варианты</li>
         </ul>
     </section>
-    <article class="variant">
+    <article class="variant" id="6">
         <h1>Вариант 1</h1>
-        <form action="#" method="get" name="n1" id="n1">
+        <form action="../result.html" method="get" name="n1" id="n1">
             <ul class="variant-tasks">
                 <li class="variant-task">
                     <div class="task-wrapper">
@@ -45,7 +45,7 @@
                             километрах.</p>
                         <img src="../img/numbers_1/task1-1.png" alt="Изображение к заданию 1">
                         <img src="../img/numbers_1/task1-2.png" alt="Изображение к заданию 1">
-                        <input type="text" id="n1t1">
+                        <input type="text" id="v6t1">
                     </div>
                 </li><li class="variant-task">
                 <div class="task-wrapper">
@@ -58,7 +58,7 @@
                         таблице никак не связана с буквенными обозначениями на графе. Определите длину пути из пункта Б в
                         пункт В, если передвигаться можно только по указанным дорогам. В ответе запишите целое число —
                         длину пути в километрах.</p>
-                    <input type="text" id="n1t2">
+                    <input type="text" id="v6t2">
                 </div>
             </li>
                 <li class="variant-task">
@@ -73,7 +73,7 @@
                             порядке без пробелов и знаков препинания.</p>
                         <img src="../img/numbers_1/task3-1.png" alt="Изображение к заданию 3">
                         <img src="../img/numbers_1/task3-2.png" alt="Изображение к заданию 3">
-                        <input type="text" id="n1t3">
+                        <input type="text" id="v6t3">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -86,7 +86,7 @@
                         <p>Так как таблицу и схему рисовали независимо друг от друга, нумерация населённых пунктов в
                             таблице никак не связана с буквенными обозначениями на графе. Определите длину дороги из пункта Г
                             в пункт К. В ответе запишите целое число.</p>
-                        <input type="text" id="n1t4">
+                        <input type="text" id="v6t4">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -106,7 +106,7 @@
                             буквенными
                             обозначениями на графе. Определите длину дороги из
                             пункта Б в пункт Д. В ответе запишите целое число.</p>
-                        <input type="text" id="n1t5">
+                        <input type="text" id="v6t5">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -119,7 +119,7 @@
                             В ответе запишите целое число — длину дороги в километрах.</p>
                         <img src="../img/numbers_1/task6-1.png" alt="Изображение к заданию 6">
                         <img src="../img/numbers_1/task6-2.png" alt="Изображение к заданию 6">
-                        <input type="text" id="n1t6">
+                        <input type="text" id="v6t6">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -133,7 +133,7 @@
                             таблице никак не связана с буквенными обозначениями на графе. Определите длину дороги из пункта Г
                             в пункт Д. В ответе запишите целое число. <br>
                             ВНИМАНИЕ! Длины отрезков на схеме не отражают длины дорог.</p>
-                        <input type="text" id="n1t7">
+                        <input type="text" id="v6t7">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -155,7 +155,7 @@
                             Определите, какова сумма протяжённостей дорог из пункта
                             Б в пункт В и из пункта Г в пункт Д. <br>
                             В ответе запишите целое число.</p>
-                        <input type="text" id="n1t8">
+                        <input type="text" id="v6t8">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -177,7 +177,7 @@
                             возрастания без пробелов и знаков препинания. <br>
                             Пример. Пусть населённым пунктам Д и Е соответствуют
                             номера П1 и П2. Тогда в ответе нужно написать 12</p>
-                        <input type="text" id="n1t9">
+                        <input type="text" id="v6t9">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -190,7 +190,7 @@
                         Так как таблицу и схему рисовали независимо друг от друга, то нумерация населённых пунктов в
                         таблице никак не связана с буквенными обозначениями на графе. Определите длину дороги из пункта Г
                         в пункт Е. ВНИМАНИЕ! Длины отрезков на схеме не отражают длины дорог.
-                        <input type="text" id="n1t10">
+                        <input type="text" id="v6t10">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -203,7 +203,7 @@
                         <p>Так как таблицу и схему рисовали независимо друг от друга, то нумерация населённых пунктов в
                             таблице никак не связана с буквенными обозначениями на графе. Определите, какова длина дороги из
                             пункта Г в пункт Е. В ответе запишите целое число — так, как оно указано в таблице.</p>
-                        <input type="text" id="n1t11">
+                        <input type="text" id="v6t11">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -227,7 +227,7 @@
                             соответствовать населённым пунктам E и F на схеме. В ответе
                             запишите эти два номера в возрастающем порядке без пробелов
                             и знаков препинания.</p>
-                        <input type="text" id="n1t12">
+                        <input type="text" id="v6t12">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -240,7 +240,7 @@
                             эти два номера в возрастающем порядке без пробелов и знаков препинания.</p>
                         <img src="../img/numbers_1/task13-1.png" alt="Изображение к заданию 13">
                         <img src="../img/numbers_1/task13-2.png" alt="Изображение к заданию 13">
-                        <input type="text" id="n1t13">
+                        <input type="text" id="v6t13">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -253,7 +253,7 @@
                         <p>Так как таблицу и схему рисовали независимо друг от друга, то нумерация населённых пунктов в
                             таблице никак не связана с буквенными обозначениями на графе. Определите, какова длина дороги из
                             пункта А в пункт Г. В ответе запишите целое число — так, как оно указано в таблице.</p>
-                        <input type="text" id="n1t14">
+                        <input type="text" id="v6t14">
                     </div>
                 </li>
                 <li class="variant-task">
@@ -266,7 +266,7 @@
                             пункта В в пункт Е. В ответе запишите целое число.</p>
                         <img src="../img/numbers_1/task15-1.png" alt="Изображение к заданию 15">
                         <img src="../img/numbers_1/task15-2.png" alt="Изображение к заданию 15">
-                        <input type="text" id="n1t15">
+                        <input type="text" id="v6t15">
                     </div>
                 </li>
             </ul>
@@ -282,6 +282,7 @@
         </ul>
     </footer>
 </main>
-<script src="js/compare-answer.js" type="module"></script>
+<script src="../js/add-answer.js" type="module"></script>
+<script src="../js/get-result.js" type="module"></script>
 </body>
 </html>
