--- a/variant_3.html
+++ b/variant_3.html
@@ -35,7 +35,7 @@
   </section>
   <article class="variant" id="3">
     <h1>Вариант 3</h1>
-    <form action="#" method="get" name="v3" id="v3">
+    <form action="result.html" method="get" name="v3" id="v3">
       <ul class="variant-tasks">
         <li class="variant-task">
           <div class="task-wrapper">
