--- a/variant_5.html
+++ b/variant_5.html
@@ -35,7 +35,7 @@
   </section>
   <article class="variant" id="5">
     <h1>Вариант 5</h1>
-    <form action="#" method="get" name="v5" id="v5">
+    <form action="result.html" method="get" name="v5" id="v5">
       <ul class="variant-tasks">
         <li class="variant-task">
           <div class="task-wrapper">
