--- a/variant_4.html
+++ b/variant_4.html
@@ -35,7 +35,7 @@
   </section>
   <article class="variant" id="4">
     <h1>Вариант 4</h1>
-    <form action="#" method="get" name="v4" id="v4">
+    <form action="result.html" method="get" name="v4" id="v4">
       <ul class="variant-tasks">
         <li class="variant-task">
           <div class="task-wrapper">
