Добавил несколько страниц а также частично прогресс

--- a/numbers/numbers_1.html
+++ b/numbers/numbers_1.html
@@ -15,7 +15,7 @@
             <h2 class="logo-name">Кот да Винчи</h2>
         </a>
         <div class="user-info">
-            <img src="../img/avatar.jpg" alt="Ваш аватар" width="75">
+            <img src="../img/pudge.jpg" alt="Ваш аватар" width="75">
             <div class="pages-header-stats">
                 <p class="user-info-happiness">Настроение: <span class="user-info-happiness__amount">123 XP</span></p>
                 <div class="user-info-happiness__level"></div>
@@ -275,10 +275,10 @@
     </article>
     <footer class="main-footer">
         <ul class="footer-nav">
-            <li class="footer-nav-item"><a href="#">О нас</a></li>
-            <li class="footer-nav-item"><a href="#">Контакты</a></li>
-            <li class="footer-nav-item"><a href="#">Материалы</a></li>
-            <li class="footer-nav-item"><a href="#">Вопросы-ответы</a></li>
+            <li class="footer-nav-item"><a href="about.html">О нас</a></li>
+            <li class="footer-nav-item"><a href="contacts.html">Контакты</a></li>
+            <li class="footer-nav-item"><a href="materials.html">Материалы</a></li>
+<!--            <li class="footer-nav-item"><a href="#">Вопросы-ответы</a></li>-->
         </ul>
     </footer>
 </main>
