--- a/profile.html
+++ b/profile.html
@@ -30,6 +30,7 @@
   <div class="information-body">
     <div class="img-container container">
       <img src="img/pudge.jpg" alt="Ваш аватар" width="170" height="170">
+      <span class="solved_tasks-counter"></span>
     </div>
     <div class="first-info-container container">
       <h2>Общая информация</h2>
@@ -74,7 +75,10 @@
   </div>
   <div class="chill-cat">
     <div class="polz">
-      <img src="img/polzunok.png" width="574" height="60">
+      <div class="filler-wrapper">
+<!--        <img src="img/filler.png" width="580" height="40" class="filler">-->
+        <div class="fill"></div>
+      </div>
     </div>
     <div class="cat-button">
       <div class="fish cat-button-item">
