--- a/result.html
+++ b/result.html
@@ -28,9 +28,9 @@
     <main>
         <section class="variants_types result-page">
             <ul class="variants_types_list">
-                <li class="variants_types_list-item numbers">Задания по вариантам</li>
-                <li class="variants_types_list-item themes">Задания по темам</li>
-                <li class="variants_types_list-item active prepared">Варианты</li>
+                <li class="variants_types_list-item active numbers"><a href="numbers.html">Задания по номерам</a></li>
+                <li class="variants_types_list-item active themes"><a href="themes.html">Задания по темам</a></li>
+                <li class="variants_types_list-item active prepared"><a href="variants.html">Варианты</a></li>
             </ul>
         </section>
         <section class="itogi-body">
