--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 </button>
             </form>
         </section>
-        <section class="about">
+        <section class="main-about">
             <img src="img/monitor.svg" alt="">
             <p>Подготовься к ЕГЭ по информатике на высокие баллы с помощью нашего сервиса. Он создан ещё недавними школьниками, поэтому мы точно знаем, чего не хватает при самостоятельном обучении!</p>
         </section>
-        <section class="about">
+        <section class="main-about">
             <img src="img/laptop.svg" alt="">
             <div class="description">
                 <p>Мы уверены, что онлайн-подготовка - это просто и эффективно, самое крутое, что ты будешь не один. У тебя будет помощник - наш необычный кот. Решай задания и получай очки, за которые можно порадовать своего виртуального питомца.</p>
@@ -46,10 +46,10 @@
     </main>
     <footer class="main-footer">
         <ul class="footer-nav">
-            <li class="footer-nav-item"><a href="#">О нас</a></li>
-            <li class="footer-nav-item"><a href="#">Контакты</a></li>
-            <li class="footer-nav-item"><a href="#">Материалы</a></li>
-            <li class="footer-nav-item"><a href="#">Вопросы-ответы</a></li>
+            <li class="footer-nav-item"><a href="about.html">О нас</a></li>
+            <li class="footer-nav-item"><a href="contacts.html">Контакты</a></li>
+            <li class="footer-nav-item"><a href="materials.html">Материалы</a></li>
+<!--            <li class="footer-nav-item"><a href="#">Вопросы-ответы</a></li>-->
         </ul>
     </footer>
 </body>
