--- a/registration.html
+++ b/registration.html
@@ -36,10 +36,10 @@
     </article>
     <footer class="main-footer">
         <ul class="footer-nav">
-            <li class="footer-nav-item"><a href="#">О нас</a></li>
-            <li class="footer-nav-item"><a href="#">Контакты</a></li>
-            <li class="footer-nav-item"><a href="#">Материалы</a></li>
-            <li class="footer-nav-item"><a href="#">Вопросы-ответы</a></li>
+            <li class="footer-nav-item"><a href="about.html">О нас</a></li>
+            <li class="footer-nav-item"><a href="contacts.html">Контакты</a></li>
+            <li class="footer-nav-item"><a href="materials.html">Материалы</a></li>
+<!--            <li class="footer-nav-item"><a href="#">Вопросы-ответы</a></li>-->
         </ul>
     </footer>
 </main>
